show voplugin_install reply status.

--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/vohttpd.js"></script>
 <script src="js/voplugin.js"></script>
+<script src="js/jquery.form.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function() {
