fix navbar css icon.

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 <style type="text/css">
 .vonger{position: relative;height:24px;width:24px;background:gray;box-sizing:border-box;border-radius:100%;position:absolute;margin:auto;}
 .vonger1{height:22%;width:22%;position:absolute;left:55%;top:21%;margin:auto;background:white;border-radius:100%;}
-.vonger2{width:8%;height:50%;position:absolute;left:40%;top:45%;margin:auto;background:white;border-radius: 10px;transform:rotate(110deg);}
+.vonger2{width:8%;height:50%;position:absolute;left:40%;top:45%;margin:auto;background:white;border-radius: 10px;-webkit-transform:rotate(110deg);}
 </style>
 <body>
 <nav class="navbar navbar-default" role="navigation">
